--- a/workflows/action_server.yml
+++ b/workflows/action_server.yml
@@ -1,24 +1,30 @@
 on:
+  # Deploy a new image whenever new changes were pushed to the main branch
+on:
   push:
     branches:
       - main
+    paths:
+    - 'actions/**'
 
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    name: Build and push Action Server image
+    name: Build Action Server image and upgrade Rasa X deployment
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - id: action_server
       name: Build an action server with a custom actions
-      uses: RasaHQ/action-server-gha@main
-      # Full list of parameters: https://github.com/RasaHQ/action-server-gha/tree/main#input-arguments
+      uses: RasaHQ/action-server-gha@master
+      # Full list of parameters: https://github.com/RasaHQ/action-server-gha/tree/master#input-arguments
       with:
-        docker_image_name: 'account_username/repository_name'
+        docker_image_name: 'yangyoungyoung/rasa_local_docker_repo'
         docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
         docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         # More details about github context:
         # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context
+        #
+        # github.sha - The commit SHA that triggered the workflow run
         docker_image_tag: ${{ github.sha }}
