--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Action Server image and upgrade Rasa X deployment
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+#    - name: Checkout repository
+#      uses: actions/checkout@v2
 
     - id: action_server
       name: Build an action server with a custom actions
-      uses: RasaHQ/action-server-gha@master
+      uses: Up-Young/rasa_local_github_repo@master
       # Full list of parameters: https://github.com/RasaHQ/action-server-gha/tree/master#input-arguments
       with:
         docker_image_name: 'yangyoungyoung/rasa_local_docker_repo'
