--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Action Server image and upgrade Rasa X deployment
     steps:
-#    - name: Checkout repository
-#      uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/*
 
     - id: action_server
       name: Build an action server with a custom actions
