--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -11,11 +11,11 @@ jobs:
     name: Build Action Server image and upgrade Rasa X deployment
     steps:
     - name: Checkout repository
-      uses: Up-Young/rasa_local_github_repo@master
+      uses: Up-Young/rasa_local_github_repo@main
 
     - id: action_server
       name: Build an action server with a custom actions
-      uses: Up-Young/rasa_local_github_repo@master
+      uses: Up-Young/rasa_local_github_repo@main
       # Full list of parameters: https://github.com/RasaHQ/action-server-gha/tree/master#input-arguments
       with:
         docker_image_name: 'yangyoungyoung/rasa_local_docker_repo'
