--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Action Server image and upgrade Rasa X deployment
     steps:
-#    - name: Checkout repository
-#      uses: Up-Young/rasa_local_github_repo@main
+    - name: Checkout repository
+      uses: Up-Young/rasa_local_github_repo/actions/*
 
     - id: action_server
       name: Build an action server with a custom actions
