--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -11,7 +11,7 @@ jobs:
     name: Build Action Server image and upgrade Rasa X deployment
     steps:
     - name: Checkout repository
-      uses: Up-Young/rasa_local_github_repo[/actions]@main
+      uses: Up-Young/rasa_local_github_repo@main
 
     - id: action_server
       name: Build an action server with a custom actions
@@ -19,7 +19,7 @@ jobs:
       # Full list of parameters: https://github.com/RasaHQ/action-server-gha/tree/master#input-arguments
       with:
         docker_image_name: 'yangyoungyoung/rasa_local_docker_repo'
-        docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
+        docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN}}
         docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
         # More details about github context:
         # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context
