--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -1,10 +1,10 @@
-#on:
-#  push:
-#    branches:
-#      - main
-#    paths:
-#    - 'actions/**'
-#
+on:
+  push:
+    branches:
+      - main
+    paths:
+    - 'actions/**'
+
 #jobs:
 #  build_and_deploy:
 #    runs-on: ubuntu-latest
