--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -1,9 +1,9 @@
-on:
-  push:
-    branches:
-      - main
-    paths:
-    - 'actions/**'
+#on:
+#  push:
+#    branches:
+#      - main
+#    paths:
+#    - 'actions/**'
 
 #jobs:
 #  build_and_deploy:
@@ -28,20 +28,31 @@ on:
 #        docker_image_tag: ${{ github.sha }}
 ##        requirements_file: './requirements.txt'
 
+on:
+  push:
+    branches:
+      - main
+    paths:
+    - 'actions/**'
+
 jobs:
-    build:
-        # ...
-        steps:
-            # ...
-            - name: Build an action server
-              uses: Up-Young/rasa_local_github_repo@main
-              with:
-                docker_image_name: 'yangyoungyoung/rasa_local_docker_repo'
-                # More details on how to use GitHub secrets:
-                # https://docs.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
-                docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
-                docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-                # More details about github context:
-                # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context
-                docker_image_tag: ${{ github.sha }}
-            # ...
+  build_and_deploy:
+    runs-on: ubuntu-latest
+    name: Build Action Server image and upgrade Rasa X deployment
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - id: action_server
+      name: Build an action server with a custom actions
+      uses: Up-Young/rasa_local_github_repo@main
+      # Full list of parameters: https://github.com/RasaHQ/action-server-gha/tree/master#input-arguments
+      with:
+        docker_image_name: 'account_username/repository_name'
+        docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
+        docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        # More details about github context:
+        # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context
+        #
+        # github.sha - The commit SHA that triggered the workflow run
+        docker_image_tag: ${{ github.sha }}
