--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -47,13 +47,13 @@ jobs:
       uses: RasaHQ/rasa-action-server-gha@main
       with:
         actions_directory: 'actions'
+#        docker_registry: 'yangyoungyoung/rasa_local_docker_repo'
 
         docker_image_name: 'rasahq/action-server-example'
         # More details on how to use GitHub secrets:
         # https://docs.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
         docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
         docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        docker_registry: 'yangyoungyoung/rasa_local_docker_repo'
         # More details about github context:
         # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context
         docker_image_tag: ${{ github.sha }}
