--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
         docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        docker_image_name: 'action_server'
+        docker_image_name: 'yangyoungyoung/rasa_local_docker_repo/action_server'
         # More details on how to use GitHub secrets:
         # https://docs.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
 
