--- a/.github/workflows/action_server.yml
+++ b/.github/workflows/action_server.yml
@@ -11,8 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Action Server image and upgrade Rasa X deployment
     steps:
+#    仓库检查
     - name: Checkout repository
       uses: actions/checkout@v2
+#    生成仓库tag
+    - name: Generate build ID
+      id: prep
+      run: |
+          branch=${GITHUB_REF##*/}
+          sha=${GITHUB_SHA::8}
+          ts=$(date +%s)
+          echo "::set-output name=BUILD_ID::${branch}-${sha}-${ts}"
 
     - name: Build an action server
       uses: RasaHQ/rasa-action-server-gha@main
@@ -25,24 +34,6 @@ jobs:
 
         # More details about github context:
         # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context
-        docker_image_tag: ${{ github.sha }}
+        docker_image_tag: ${{ steps.prep.outputs.BUILD_ID }}
         requirements_file: 'actions/requirements.txt'
-
-
-#    - name: Build an action server
-#      uses: ./
-#      with:
-#        actions_directory: 'Up-Young/rasa_local_github_repo/actions'
-##        docker_registry: 'yangyoungyoung/rasa_local_docker_repo'
-#
-#        docker_image_name: 'yangyoungyoung/rasa_local_docker_repo'
-#        # More details on how to use GitHub secrets:
-#        # https://docs.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
-#        docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
-#        docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-#        # More details about github context:
-#        # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#github-context
-#        docker_image_tag: ${{ github.sha }}
-#        requirements_file: 'actions/requirements.txt'
-#        # ...
 
