--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,3 +2,8 @@ version: '3.4'
 services:
   app:
     image: "yangyoungyoung/action_server"
+
+  nginx:
+    ports:
+      - "9780:8080"
+      - "443:8443"
